--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,6 +78,7 @@ a {
 
 .btn.btn-form {
   border: 1px solid #00A699;
+  background-color: #00A699;
   border-color: #00A699;
 }
 
@@ -153,6 +154,59 @@ a {
 .form-control {
   border-radius: 2px;
   height: 4rem;
+}
+
+.form-group input {
+  height: 45px;
+  border: 1px solid #00A699;
+}
+
+.form-group textarea {
+  border: 1px solid #00A699;
+}
+
+.form-group select {
+  width: 100%;
+  color: #565a5c;
+  background-color: white;
+  border: 1px solid #00A699;
+  border-radius: 2px;
+  padding: 10px;
+  appearance: none;
+  -moz-appearance: none; /*Firefox*/
+  -webkit-appearance: none; /*Safari*/
+}
+
+.select:before {
+  content: '\25bc';
+  font-size: 1.2em;
+  position: absolute;
+  color: #00A699;
+  top: 30px;
+  right: 30px;
+  transform: scale(0.94, 0.62);
+}
+
+.form-group input[type="checkbox"] {
+  height: 1.25em;
+  width: 1.25em;
+  margin-bottom: -0.25em;
+  margin-right: 5px;
+  vertical-align: top;
+  border: 1px solid #00A699;
+  border-radius: 2px;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
+.form-group input[type="checkbox"]:checked:before {
+  content: '\2713';
+  position: absolute;
+  font-size: 0.95em;
+  text-align: center;
+  width: 1.25em;
+  color: #00A699;
 }
 
 //SIDEBAR
