--- a/app/views/rooms/photo_upload.html.erb
+++ b/app/views/rooms/photo_upload.html.erb
@@ -18,14 +18,14 @@
                 <div class="row">
                   <div class="form-group">
                     <span class="btn btn-default btn-file text-babu">
-                      Select Photos
+                      <i class="fa fa-cloud-upload" aria-hidden="true"></i> Select Photos
                       <%= file_field_tag "images[]", type: :file, multipart: true %>
                     </span>
                   </div>
                 </div>
 
                 <div class="text-center">
-                  <%= f.submit "Add Photos", class: "btn btn-form" %>
+                  <%= f.submit "Update Room", class: "btn btn-form" %>
                 </div>
               <% end %>
             </div>
