--- a/app/views/rooms/photo_upload.html.erb
+++ b/app/views/rooms/photo_upload.html.erb
@@ -19,7 +19,7 @@
                   <div class="form-group">
                     <span class="btn btn-default btn-file text-babu">
                       <i class="fa fa-cloud-upload" aria-hidden="true"></i> Select Photos
-                      <%= file_field_tag "images[]", type: :file, multipart: true %>
+                      <%= file_field_tag "images[]", type: :file, multiple: true %>
                     </span>
                   </div>
                 </div>
