Create Your Trips Page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,7 +209,7 @@ a {
   color: #00A699;
 }
 
-//SIDEBAR
+// SIDEBAR
 .sidebar-list {
   padding-left: 0;
   list-style: none;
@@ -232,7 +232,7 @@ a {
 }
 
 .active.sidebar-link {
-  color: #565a5c;
+  color: #565A5C;
   font-weight: bold;
   text-decoration: none;
 }
