--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,7 +5,7 @@
         <%= link_to "Your Listings", rooms_path, class: "sidebar-link active" %>
       </li>
       <li class="sidebar-item">
-        <%= link_to "Your Reservations", rooms_path, class: "sidebar-link active" %>
+        <%= link_to "Your Reservations", rooms_path, class: "sidebar-link" %>
       </li>
     </ul>
   </div>
