--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,7 +5,10 @@
         <%= link_to "Your Listings", rooms_path, class: "sidebar-link active" %>
       </li>
       <li class="sidebar-item">
-        <%= link_to "Your Reservations", rooms_path, class: "sidebar-link" %>
+        <%= link_to "Your Reservations", your_reservations_path, class: "sidebar-link" %>
+      </li>
+      <li class="sidebar-item">
+        <%= link_to "Your Trips", your_trips_path, class: "sidebar-link" %>
       </li>
     </ul>
   </div>
