Creating Show Reviews Page

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -51,7 +51,7 @@
     <!-- About -->
     <div class="row">
       <div class="col-md-12">
-        <h3>About This Linsting</h3>
+        <h3>About This Listing</h3>
         <p><%= @room.summary %></p>
       </div>
     </div>
@@ -114,6 +114,21 @@
       </div>
       <% end %>
     </div>
+    <hr>
+
+    <!-- REVIEWS -->
+    <div class="row">
+      <div class="col-md-12">
+        <h3>
+          <%= pluralize(@guest_reviews.count, "Review") %>
+          <span id="average_rating"></span>
+        </h3>
+        <div class="container">
+          <div><%= render "reviews/guest_list" %></div>
+        </div>
+      </div>
+    </div>
+    <br>
     <hr>
 
     <!-- GOOGLE MAP -->
