--- a/app/views/reviews/_guest_list.html.erb
+++ b/app/views/reviews/_guest_list.html.erb
@@ -12,7 +12,7 @@
         <strong><%= r.guest.fullname %></strong>
       </div>
       <div class="col-md-9">
-        <div><%= r.star %></div>
+        <div id="star_<%= r.id %>"></div>
         <% if current_user && current_user == r.guest %>
           <span class="pull-right">
             <%= link_to r, method: :delete, data: {confirm: "Are you sure?"} do %>
@@ -24,5 +24,14 @@
         <div><%= r.comment %></div>
       </div>
     </div>
+
+    <script type="text/javascript">
+      $('#star_<%= r.id %>').raty({
+        path: '/assets',
+        readOnly: true,
+        score: <%= r.star %>
+      });
+    </script>
+
   <% end %>
 <% end %>
