--- a/app/views/reviews/_host_form.html.erb
+++ b/app/views/reviews/_host_form.html.erb
@@ -16,7 +16,7 @@
       <div class="modal-body">
         <%= form_for current_user.host_reviews.new do |f| %>
           <div class="form-group text-center">
-            <%= f.text_field :star %>
+            <div id="stars_<%=reservation.id%>"></div>
           </div>
           <div class="form-group">
               <%= f.text_area :comment, rows: 3, class: "form-control" %>
@@ -28,6 +28,15 @@
           <div class="text-center">
             <%= f.submit "Add Review", class: "btn btn-normal" %>
           </div>
+
+          <script type="text/javascript">
+            $('#stars_<%=reservation.id%>').raty({
+              path: '/assets',
+              scoreName: 'host_review[star]',
+              score: 1
+            });
+          </script>
+
         <% end %>
       </div>
     </div>
