--- a/app/views/reviews/_host_list.html.erb
+++ b/app/views/reviews/_host_list.html.erb
@@ -11,7 +11,7 @@
         <strong><%= r.host.fullname %></strong>
       </div>
       <dic class="col-md-9">
-        <div><%= r.star %></div>
+        <div id="star_<%= r.id %>"></div>
         <% if current_user && current_user == r.host %>
           <span class="pull-right">
             <%= link_to r, method: :delete, data: {confirm: "Are you sure?"} do %>
@@ -19,9 +19,18 @@
             <% end %>
           </span>
         <% end %>
-        
+
       <div><%= r.created_at.strftime("%v") %></div>
       <div><%= r.comment %></div>
     </div>
+
+    <script type="text/javascript">
+      $('#star_<%= r.id %>').raty({
+        path: '/assets',
+        readOnly: true,
+        score: <%= r.star %>
+      });
+    </script>
+    
   <% end %>
 <% end %>
