--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -3,20 +3,20 @@
     <!-- SEARCH PANEL -->
     <div class="row">
       <br>
-      <div class="collapse" id="collapsePanel">
+      <div id="collapsePanel">
 
-        <%= search_form_for @search, url: search_path do %>
+        <%= search_form_for @search, url: search_path do |f| %>
           <div class="row">
             <div class="col-md-8">
               <label>Price range:</label>
             </div>
             <div class="col-md-2">
               <label>Min Price:</label>
-              <%= f.text_field :price_gteq, class: "form_control" %>
+              <%= f.text_field :price_gteq, class: "form-control" %>
             </div>
             <div class="col-md-2">
               <label>Max Price:</label>
-              <%= f.text_field :price_lteq, class: "form_control" %>
+              <%= f.text_field :price_lteq, class: "form-control" %>
             </div>
           </div>
           <hr>
@@ -95,6 +95,23 @@
         <% end %>
 
       </div>
+      <br>
+
+      <div class="row">
+        <% @arrRooms.each do |room| %>
+          <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading preview">
+                <%= image_tag room.cover_photo(:medium) %>
+              </div>
+              <div class="panel-body">
+                <%= link_to room.listing_name, room %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+
     </div>
   </div>
   <div id="right">
