--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -2,8 +2,16 @@
   <div id="left">
     <!-- SEARCH PANEL -->
     <div class="row">
+      <div class="col-md-offset-4 col-md-4">
+        <button id="filter" class="btn btn-default" data-toggle="collapse" data-target="#collapsePanel">
+          More filters <i class="fa fa-chevron-down"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="row">
       <br>
-      <div id="collapsePanel">
+      <div class="collapse" id="collapsePanel">
 
         <%= search_form_for @search, url: search_path do |f| %>
           <div class="row">
@@ -116,6 +124,40 @@
   </div>
   <div id="right">
     <!-- GOOGLE MAP WILL BE HERE -->
+
+    <div id="map" style="width:100%; height:100%"></div>
+    <script src="https://maps.googleapis.com/maps/api/js" type="text/javascript"></script>
+    <script>
+      function initialize(){
+        var location = {lat: 44.5403, lng: -78.5463}
+
+        <% if @arrRooms.length >0 %>
+          location = {lat: <%= @arrRooms[0].latitude %>, lng: <%= @arrRooms[0].longitude %>}
+        <% end %>
+
+        var map = new google.maps.Map(document.getElementById('map'),{
+          center: location,
+          zoom: 12
+        });
+
+        var maker, infoWindow;
+
+        <% @arrRooms.each do |room| %>
+        maker = new google.maps.Marker({
+          position: {lat: <%= room.latitude %>, lng: <%= room.longitude %>},
+          map: map
+        });
+
+        infoWindow = new google.maps.InfoWindow({
+          content: "<div class='map_price'>$" + <%= room.price %> + "</div>"
+        });
+
+        infoWindow.open(map, maker);
+        <% end %>
+      }
+
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
   </div>
 </div>
 
@@ -138,5 +180,16 @@ $('#end_date').datepicker({
     $('#start_date').datepicker("option", "maxDate", selected);
     $('#start_date').attr("disabled", false);
   }
+});
+
+var open = true;
+$('#filter').click(function(){
+  if(open) {
+    $('#filter').html("More filters <i class='fa fa-chevron-up'></i>")
+  } else {
+    $('#filter').html("More filters <i class='fa fa-chevron-down'></i>")
+  }
+
+  open = !open;
 });
 </script>
