--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -13,7 +13,7 @@
       <br>
       <div class="collapse" id="collapsePanel">
 
-        <%= search_form_for @search, url: search_path do |f| %>
+        <%= search_form_for @search, url: search_path, remote: true do |f| %>
           <div class="row">
             <div class="col-md-8">
               <label>Price range:</label>
@@ -105,19 +105,8 @@
       </div>
       <br>
 
-      <div class="row">
-        <% @arrRooms.each do |room| %>
-          <div class="col-md-4">
-            <div class="panel panel-default">
-              <div class="panel-heading preview">
-                <%= image_tag room.cover_photo(:medium) %>
-              </div>
-              <div class="panel-body">
-                <%= link_to room.listing_name, room %>
-              </div>
-            </div>
-          </div>
-        <% end %>
+      <div class="row" id="room_listing" >
+        <%= render partial: "rooms/rooms_list", locals: {rooms: @arrRooms} %>
       </div>
 
     </div>
@@ -128,12 +117,12 @@
     <div id="map" style="width:100%; height:100%"></div>
     <script src="https://maps.googleapis.com/maps/api/js" type="text/javascript"></script>
     <script>
-      function initialize(){
+      function initialize(rooms){
         var location = {lat: 44.5403, lng: -78.5463}
 
-        <% if @arrRooms.length >0 %>
-          location = {lat: <%= @arrRooms[0].latitude %>, lng: <%= @arrRooms[0].longitude %>}
-        <% end %>
+        if(rooms.length > 0){
+          location = {lat: rooms[0].latitude, lng: rooms[0].longitude}
+        }
 
         var map = new google.maps.Map(document.getElementById('map'),{
           center: location,
@@ -142,21 +131,23 @@
 
         var maker, infoWindow;
 
-        <% @arrRooms.each do |room| %>
-        maker = new google.maps.Marker({
-          position: {lat: <%= room.latitude %>, lng: <%= room.longitude %>},
-          map: map
-        });
+        rooms.forEach(function(room) {
+          maker = new google.maps.Marker({
+            position: {lat: room.latitude, lng: room.longitude},
+            map: map
+          });
 
-        infoWindow = new google.maps.InfoWindow({
-          content: "<div class='map_price'>$" + <%= room.price %> + "</div>"
-        });
+          infoWindow = new google.maps.InfoWindow({
+            content: "<div class='map_price'>$" + room.price + "</div>"
+          });
 
-        infoWindow.open(map, maker);
-        <% end %>
+          infoWindow.open(map, maker);
+        })
       }
 
-      google.maps.event.addDomListener(window, 'load', initialize);
+      google.maps.event.addDomListener(window, 'load', function() {
+        initialize(<%= raw @arrRooms.to_json %>)
+      });
     </script>
   </div>
 </div>
