--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
+<div class="row">
+  <div class="col-md-7 baner">
+    <h1><span class="text-red">Booking Room</span> Book unique homes and experience a city like a local.</h1>
+  </div>
+</div>
+
 <%= form_tag search_path, method: :get do %>
   <div class="row">
     <div class="col-md-6">
@@ -25,6 +31,7 @@
   <h3>Homes</h3>
 </div>
 <br>
+
 <div class="row">
   <% @rooms.each do |room| %>
     <div class="col-md-4">
@@ -38,6 +45,35 @@
       </div>
     </div>
   <% end %>
+</div>
+
+<!-- HOMES -->
+<div>
+  <h3>Cities</h3>
+</div>
+<br>
+
+<div class="row">
+  <div class="col-md-3 col-sm-12">
+    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=los+angeles">
+      <div class="discovery-card" style="background-image: url('/assets/LA.jpg')"></div>
+    </a>
+  </div>
+  <div class="col-md-3 col-sm-12">
+    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=london">
+      <div class="discovery-card" style="background-image: url('/assets/LD.jpg')"></div>
+    </a>
+  </div>
+  <div class="col-md-3 col-sm-12">
+    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=paris">
+      <div class="discovery-card" style="background-image: url('/assets/PR.jpg')"></div>
+    </a>
+  </div>
+  <div class="col-md-3 col-sm-12">
+    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=miami">
+      <div class="discovery-card" style="background-image: url('/assets/MI.jpg')"></div>
+    </a>
+  </div>
 </div>
 
 <script>
