--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <%= form_tag search_path, method: :get do %>
   <div class="row">
     <div class="col-md-6">
-      <%= text_field_tag :search, params[:search], placeholder: "Where are you going?", class: "form-control" %>
+      <%= text_field_tag :search, params[:search], placeholder: "Where are you going?", class: "form-control", id: "autolocation" %>
     </div>
     <div class="col-md-3">
       <%= text_field_tag :start_date, params[:start_date], placeholder: "Start Date", class: "form-control datepicker" %>
@@ -66,23 +66,29 @@
 </div>
 
 <script>
-$('#start_date').datepicker({
-  dateFormat: 'dd-mm-yy',
-  minDate: 0,
-  maxDate: '3m',
-  onSelect: function(selected){
-    $('#end_date').datepicker("option", "minDate", selected);
-    $('#end_date').attr("disabled", false);
-  }
-});
+  $('#start_date').datepicker({
+    dateFormat: 'dd-mm-yy',
+    minDate: 0,
+    maxDate: '3m',
+    onSelect: function(selected){
+      $('#end_date').datepicker("option", "minDate", selected);
+      $('#end_date').attr("disabled", false);
+    }
+  });
 
-$('#end_date').datepicker({
-  dateFormat: 'dd-mm-yy',
-  minDate: 0,
-  maxDate: '3m',
-  onSelect: function(selected){
-    $('#start_date').datepicker("option", "maxDate", selected);
-    $('#start_date').attr("disabled", false);
-  }
-});
+  $('#end_date').datepicker({
+    dateFormat: 'dd-mm-yy',
+    minDate: 0,
+    maxDate: '3m',
+    onSelect: function(selected){
+      $('#start_date').datepicker("option", "maxDate", selected);
+      $('#start_date').attr("disabled", false);
+    }
+  });
+</script>
+
+<script>
+  $(function() {
+    $("#autolocation").geocomplete();
+  });
 </script>
