--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,9 +17,11 @@
               Facebook  <span class="pull-right icon-babu"><i class="fa fa-check-circle-o"></i></span>
             </li>
           <% end %>
-          <li>
-            Phone Number  <span class="pull-right icon-babu"><i class="fa fa-check-circle-o"></i></span>
-          </li>
+          <% if current_user.phone_verified %>
+            <li>
+              Phone Number  <span class="pull-right icon-babu"><i class="fa fa-check-circle-o"></i></span>
+            </li>
+          <% end %>
         </ul>
       </div>
     </div>
