--- a/app/views/rooms/listing.html.erb
+++ b/app/views/rooms/listing.html.erb
@@ -32,6 +32,13 @@
 
             <div class="col-md-4 select">
               <div class="form-group">
+                <lable>Booking Type</lable>
+                <%= f.select :instant, Room.instants.map {|key, value| [key.humanize, key]}, selected: 'Instant',  prompt: "Select...", class: "form-control" %>
+              </div>
+            </div>
+
+            <div class="col-md-4 select">
+              <div class="form-group">
                 <lable>Accommodate</lable>
                 <%= f.select :accommodate, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]],
                               id: "accommodate", prompt: "Select...", class: "form-control" %>
