--- a/app/views/reservations/your_trips.html.erb
+++ b/app/views/reservations/your_trips.html.erb
@@ -22,6 +22,7 @@
           <div class="row">
             <div class="col-md-2">
               <%= trip.start_date.strftime('%v') %>
+                <p><%= trip.status %></p>
             </div>
             <div class="col-md-2">
               <%= link_to room_path(trip.room) do %>
