--- a/app/views/calendars/host.html.erb
+++ b/app/views/calendars/host.html.erb
@@ -11,7 +11,7 @@
             } %>
         </div>
       </div>
-      <%= f.hidden_field :start_date, id: "start-date", value: params[:start_date] %>
+      <%= f.hidden_field :start_date, id: "start-date", value: params[:start_date], onchange: "$(this.form).submit()" %>
     <% end %>
   </div>
 <% end %>
@@ -57,4 +57,18 @@
         `);
     }
   })
+
+  $('.fc-prev-button').click(function(){
+    var current = new Date($('#start_date').val());
+    var prev = new Date(current.getFullYear(), current.getMonth() - 1, 1)
+    $('#start_date').val(moment(prev).format('YYYY-MM-DD'))
+    $('#start_date').trigger('change')
+  });
+
+  $('.fc-next-button').click(function(){
+    var current = new Date($('#start_date').val());
+    var next = new Date(current.getFullYear(), current.getMonth() + 1, 1)
+    $('#start_date').val(moment(next).format('YYYY-MM-DD'))
+    $('#start_date').trigger('change')
+  });
 </script>
