--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -170,6 +170,16 @@ a {
   border: 1px solid #00A699;
 }
 
+.form-group input[type="radio"] {
+  height: 15px;
+  margin-right: 10px;
+}
+
+.btn-group label {
+  margin-right: 15px;
+}
+
+
 .form-group select {
   width: 100%;
   color: #565a5c;
@@ -354,6 +364,10 @@ a {
 //CALENDAR
 .fc-content.Waiting {
   background-color: #C9CC6D;
+}
+
+.fc-past {
+  background-color: lightgray;
 }
 
 .fc-day {
