--- a/app/views/calendars/host.html.erb
+++ b/app/views/calendars/host.html.erb
@@ -22,6 +22,7 @@
 
 <script type="text/javascript">
   window.reservations = <%= raw @events.to_json %>
+  window.days = <%= raw @days.to_json %>
 
   console.log(reservations);
 
@@ -59,9 +60,23 @@
         `);
     },
     dayRender: function(date, cell){
+      var dayInfo = $.grep(days, function(e){
+        return e.day === date.format();
+      });
+
       <% if !@rooms.blank? %>
-        cell.append('<span class="day-price">' + '$<%= @room.price %>' + '</span>')
+        if (dayInfo.length > 0){
+          if(dayInfo[0].status == "Not_Available"){
+            cell.addClass('fc-past')
+          }else{
+            cell.append('<span class="day-price">' + '$' + dayInfo[0].price + '</span>')
+          }
+        }else{
+          cell.append('<span class="day-price">' + '$<%= @room.price %>' + '</span>')
+        }
       <% end %>
+
+
     },
     selectable: true,
     select: function(start, end, jsEvent, view){
