--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 col-sm-3">
     <div class="center">
       <%= image_tag avatar_url(@user), class: "avatar-full"%>
     </div>
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-md-9 col-sm-9">
     <h2><%= @user.fullname %></h2>
 
     <div class="description row-space-3">
