--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 col-sm-3">
     <div class="center">
       <%= image_tag avatar_url(current_user), class: "avatar-full" %>
     </div>
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-md-9 col-sm-9">
     <!-- Notification -->
     <div class="panel panel-default">
       <div class="panel-heading">
