--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,25 @@
 <div class="row">
-  <div class="col-md-7 baner">
+  <div class="col-md-7 col-sm-7  baner">
     <h1><span class="text-red">Booking Room</span> Book unique homes and experience a city like a local.</h1>
   </div>
 </div>
 
 <%= form_tag search_path, method: :get do %>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-sm-6">
       <%= text_field_tag :search, params[:search], placeholder: "Where are you going?", class: "form-control", id: "autolocation" %>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-3">
       <%= text_field_tag :start_date, params[:start_date], placeholder: "Start Date", class: "form-control datepicker" %>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-3">
       <%= text_field_tag :end_date, params[:end_date], placeholder: "End Date", class: "form-control datepicker" %>
     </div>
   </div>
   <br><br>
 
   <div class="row">
-    <div class="col-md-offset-4 col-md-4">
+    <div class="col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4 ">
       <%= submit_tag "Search", class: "btn btn-normal btn-block"  %>
     </div>
   </div>
@@ -43,22 +43,22 @@
 <br>
 
 <div class="row">
-  <div class="col-md-3 col-sm-12">
+  <div class="col-md-3 col-sm-3">
     <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=los+angeles">
       <div class="discovery-card" style="background-image: url('/assets/LA.jpg')"></div>
     </a>
   </div>
-  <div class="col-md-3 col-sm-12">
+  <div class="col-md-3 col-sm-3">
     <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=london">
       <div class="discovery-card" style="background-image: url('/assets/LD.jpg')"></div>
     </a>
   </div>
-  <div class="col-md-3 col-sm-12">
+  <div class="col-md-3 col-sm-3">
     <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=paris">
       <div class="discovery-card" style="background-image: url('/assets/PR.jpg')"></div>
     </a>
   </div>
-  <div class="col-md-3 col-sm-12">
+  <div class="col-md-3 col-sm-3">
     <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=miami">
       <div class="discovery-card" style="background-image: url('/assets/MI.jpg')"></div>
     </a>
