--- a/app/views/reviews/_guest_list.html.erb
+++ b/app/views/reviews/_guest_list.html.erb
@@ -7,11 +7,11 @@
   <% @guest_reviews.order(id: :desc).each do |r| %>
     <hr>
     <div class="row">
-      <div class="col-md-3 text-center">
+      <div class="col-md-3 col-sm-3 text-center">
         <%= image_tag avatar_url(r.guest), class: "img-circle avatar-medium" %><br><br>
         <strong><%= r.guest.fullname %></strong>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 col-sm-9">
         <div id="star_<%= r.id %>"></div>
         <% if current_user && current_user == r.guest %>
           <span class="pull-right">
