--- a/app/views/rooms/amenities.html.erb
+++ b/app/views/rooms/amenities.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 col-sm-3">
     <%= render 'room_menu'%>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9 col-sm-9">
     <div class="panel panel-default">
 
       <div class="panel-heading">
@@ -14,22 +14,22 @@
           <%= form_for @room do |f| %>
 
             <div class="row form-group">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4">
                 <%= f.check_box :is_tv %> TV
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4">
                 <%= f.check_box :is_kitchen %> Kitchen
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4">
                 <%= f.check_box :is_internet %> Internet
               </div>
             </div>
 
             <div class="row form-group">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4">
                 <%= f.check_box :is_heating %> Heating
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4">
                 <%= f.check_box :is_air %> Air Conditioning
               </div>
             </div>
