--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3  col-sm-3">
     <ul class="sidebar-list">
       <li class="sidebar-item">
         <%= link_to "Your Listings", rooms_path, class: "sidebar-link active" %>
@@ -12,7 +12,7 @@
       </li>
     </ul>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9  col-sm-9">
     <div class="panel panel-default">
       <div class="panel-heading">
         Listings
@@ -20,13 +20,13 @@
       <div class="panel-body">
         <% @rooms.each do |room| %>
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 col-sm-3">
               <%= image_tag room.cover_photo(:thumb) %>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-sm-6">
               <h4><%= room.listing_name %></h4>
             </div>
-            <div class="col-md-3 right">
+            <div class="col-md-3 col-sm-3 right">
               <%= link_to "Update", listing_room_path(room), class: "btn btn-form" %>
             </div>
           </div>
