--- a/app/views/rooms/listing.html.erb
+++ b/app/views/rooms/listing.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 col-sm-3">
     <%= render 'room_menu'%>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9 col-sm-9">
     <div class="panel panel-default">
 
       <div class="panel-heading">
@@ -14,7 +14,7 @@
 
           <%= form_for @room do |f| %>
           <div class="row">
-            <div class="col-md-4 select">
+            <div class="col-md-4 col-sm-4 select">
               <div class="form-group">
                 <lable>Home Type</lable>
                 <%= f.select :home_type, [["Apartment", "Apartment"], ["House", "House"], ["Bed & Breakfast", "Bed & Breakfast"]],
@@ -22,7 +22,7 @@
               </div>
             </div>
 
-            <div class="col-md-4 select">
+            <div class="col-md-4 col-sm-4 select">
               <div class="form-group">
                 <lable>Room Type</lable>
                 <%= f.select :room_type, [["Entire", "Entire"], ["Private", "Private"], ["Shared", "Shared"]],
@@ -30,14 +30,14 @@
               </div>
             </div>
 
-            <div class="col-md-4 select">
+            <div class="col-md-4 col-sm-4 select">
               <div class="form-group">
                 <lable>Booking Type</lable>
                 <%= f.select :instant, Room.instants.map {|key, value| [key.humanize, key]}, selected: 'Instant',  prompt: "Select...", class: "form-control" %>
               </div>
             </div>
 
-            <div class="col-md-4 select">
+            <div class="col-md-4 col-sm-4 select">
               <div class="form-group">
                 <lable>Accommodate</lable>
                 <%= f.select :accommodate, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]],
@@ -45,7 +45,7 @@
               </div>
             </div>
 
-            <div class="col-md-4 select">
+            <div class="col-md-4 col-sm-4 select">
               <div class="form-group">
                 <lable>Bedrooms</lable>
                 <%= f.select :bed_room, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]],
@@ -53,7 +53,7 @@
               </div>
             </div>
 
-            <div class="col-md-4 select">
+            <div class="col-md-4 col-sm-4 select">
               <div class="form-group">
                 <lable>Bathrooms</lable>
                 <%= f.select :bath_room, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]],
