--- a/app/views/rooms/photo_upload.html.erb
+++ b/app/views/rooms/photo_upload.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 col-sm-3">
     <%= render 'room_menu'%>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9 col-sm-9">
     <div class="panel panel-default">
 
       <div class="panel-heading">
@@ -12,7 +12,7 @@
       <div class="panel-body">
         <div class="container">
           <div class="row">
-            <div class="col-md-offset-3 col-md-6">
+            <div class="col-md-offset-3 col-md-6 col-sm-12">
               <!-- PHOTO UPLOAD GOES HERE -->
               <%= form_for @room, url: room_photos_path(@room), method: 'post', html: {multipart: true} do |f| %>
                 <div class="row">
