--- a/app/views/rooms/pricing.html.erb
+++ b/app/views/rooms/pricing.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 col-sm-3">
     <%= render 'room_menu'%>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9 col-sm-9">
     <div class="panel panel-default">
 
       <div class="panel-heading">
