--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,10 +13,10 @@
     <div id="navbar" class="navbar-collapse collapse">
       <%= form_tag search_path, class: "navbar-form navbar-left", method: :get do %>
       <div class="row">
-        <div class="col-md-8 form-group">
+        <div class="col-md-8 col-sm-8 col-xs-12 form-group">
           <%= text_field_tag :search, params[:search], placeholder: "Anywhere", class: "form-control", id: "autoaddress2" %>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-12">
           <%= submit_tag "Search", class: "btn btn-normal btn-block"  %>
         </div>
       </div>
@@ -53,14 +53,14 @@
   </div>
 </nav>
 
-<% if (user_signed_in?) && !current_page?(root_path) && !current_page?("/rooms/#{params[:id]}") %>
+<% if (user_signed_in?) && !current_page?(root_path) && !current_page?("rooms/#{params[:id]}") %>
   <nav class="navbar navbar-default" style="background-color: #565A5C">
     <div class="container">
       <ul class="nav navbar-nav">
-        <li <% if current_page?(dashboard_path) %> class="active" <% end %>><%= link_to "Dashboard", dashboard_path%></li>
-        <li <% if current_page?(rooms_path) %> class="active" <% end %>><%= link_to "Manage Listings", rooms_path%></li>
-        <li <% if current_page?(host_calendar_path) %> class="active" <% end %>><%= link_to "Host Calendar", host_calendar_path%></li>
-        <li <% if current_page?(payment_method_path) %> class="active" <% end %>><%= link_to "Account Settings", payment_method_path%></li>
+        <li <% if current_page?(dashboard_path) %> class="active" <% end %>><%= link_to "Dashboard", dashboard_path, class: "navbar_style" %></li>
+        <li <% if current_page?(rooms_path) %> class="active" <% end %>><%= link_to "Manage Listings", rooms_path, class: "navbar_style" %></li>
+        <li <% if current_page?(host_calendar_path) %> class="active" <% end %>><%= link_to "Host Calendar", host_calendar_path, class: "navbar_style" %></li>
+        <li <% if current_page?(payment_method_path) %> class="active" <% end %>><%= link_to "Account Settings", payment_method_path, class: "navbar_style" %></li>
       </ul>
     </div>
   </nav>
